Added MDX plugin Convert cv.md to cv.mdx and imported images in /src/assets into Astro

--- a/src/content/spec/cv.mdx
+++ b/src/content/spec/cv.mdx
@@ -1,3 +1,10 @@
+import { Image } from 'astro:assets';
+import MultistageCLLC_1 from '/src/assets/images/MultistageCLLC-1.png'
+import MultistageCLLC_2 from '/src/assets/images/MultistageCLLC-2.png'
+import MultistageCLLC_3 from '/src/assets/images/MultistageCLLC-3.png'
+import Heartsound_1 from '/src/assets/images/heartsound-1.jpg'
+import Heartsound_2 from '/src/assets/images/heartsound-2.jpg'
+
 # Education
 **B.S.** in Electrical & Information Engineering, Zhejiang University
 
@@ -47,9 +54,9 @@
 ## 1kW Bidirectional Isolated DC/DC Converter
 
 <div style="display: flex; justify-content: space-between;">
-    <img src="/src/assets/images/MultistageCLLC-1.png" alt="Image 1" style="height: auto; width: 32%; object-fit: contain;">
-    <img src="/src/assets/images/MultistageCLLC-2.png" alt="Image 2" style="height: auto; width: 32%; object-fit: contain;">
-    <img src="/src/assets/images/MultistageCLLC-3.png" alt="Image 3" style="height: auto; width: 32%; object-fit: contain;">
+    <Image src={MultistageCLLC_1} alt="Image 1" style="height: auto; width: 32%; object-fit: contain;"/>
+    <Image src={MultistageCLLC_2} alt="Image 2" style="height: auto; width: 32%; object-fit: contain;"/>
+    <Image src={MultistageCLLC_3} alt="Image 3" style="height: auto; width: 32%; object-fit: contain;"/>
 </div>
 
 - Designed a 1kW bidirectional isolated DC/DC Converter, with 36~60V on the LV side and 400V on the HV side. The device achieves peak efficiency of 94% in experiment. GaN HEMT and planar transformer are used to improve power density, allowing for portable size with the thickness low as 25mm. Experiment shows that the converter is capable of driving 500W load with natural cooling at room temperature, or 1kW load with an extra 10W forced cooling.
@@ -60,8 +67,8 @@
 ## Smart Stethoscope & Electrocardiogram Detector
 
 <div style="display: flex; justify-content: space-between;">
-    <img src="/src/assets/images/heartsound-1.jpg" alt="Image 1" style="height: auto; width: 45%; object-fit: contain;">
-    <img src="/src/assets/images/heartsound-2.jpg" alt="Image 2" style="height: auto; width: 45%; object-fit: contain;">
+    <Image src={Heartsound_1} alt="Image 1" style="height: auto; width: 45%; object-fit: contain;"/>
+    <Image src={Heartsound_2} alt="Image 2" style="height: auto; width: 45%; object-fit: contain;"/>
 </div>
 
 
@@ -78,7 +85,7 @@
 - Host seminars regularly to share technical updates with team members.
 - Responsible of crew training, including circuit simulation and PCB design fundamentals.
 
-<!-- # Technique Skills
+{/* # Technique Skills
 **Circuit-level simulation tools**: Cadence PSpice, PLECS, ADS, Multisim, Proteus.
 
 **PCB design tools**: Altium Designer.
@@ -88,4 +95,4 @@ Embedded Software Development: Embedded Linux on Zynq 7000 SoC, STM32, ESP32.
 
 **Document composing**: Latex / Overleaf.
 
-**Graphic design**: Photoshop, Inksacpe. -->
+**Graphic design**: Photoshop, Inksacpe. */}
