--- a/src/content/posts/open-libs/diy-connector.mdx
+++ b/src/content/posts/open-libs/diy-connector.mdx
@@ -7,6 +7,8 @@ category: Project Updates
 draft: false
 ---
 
+::github{repo="tsaoo/DIY-Connector"}
+
 import RemoteMD from '/src/components/misc/RemoteMD.astro'
 
 <RemoteMD src="https://raw.githubusercontent.com/tsaoo/DIY-Connector/main/README.md"/>
