--- a/src/content/spec/cv.mdx
+++ b/src/content/spec/cv.mdx
@@ -6,7 +6,7 @@ import Heartsound_1 from '/src/assets/images/heartsound-1.jpg'
 import Heartsound_2 from '/src/assets/images/heartsound-2.jpg'
 
 # Education
-**B.S.** in Electrical & Information Engineering, Zhejiang University
+**B.S.** in Electronic Information Engineering, Zhejiang University
 
 # Honor
 <table cellpadding="10" cellspacing="0" width="100%" style="font-size: 16px;">
@@ -50,7 +50,7 @@ import Heartsound_2 from '/src/assets/images/heartsound-2.jpg'
 - Collaborated with the R&D team of Zhejiang Qizhen Healthcare Tech Ltd.. Acquired 2 national patents.
 - Ran circuit-level simulation in PSpice and ADS, system-level simulation in Simulink. Designed PCBs by Altium Designer. Tuned the parasitic parameters by Ansys Maxwell.
 
-# Selected Projects
+# Projects and Competitions
 ## 1kW Bidirectional Isolated DC/DC Converter
 
 <div style="display: flex; justify-content: space-between;">
@@ -60,9 +60,9 @@ import Heartsound_2 from '/src/assets/images/heartsound-2.jpg'
 </div>
 
 - Designed a 1kW bidirectional isolated DC/DC Converter, with 36~60V on the LV side and 400V on the HV side. The device achieves peak efficiency of 94% in experiment. GaN HEMT and planar transformer are used to improve power density, allowing for portable size with the thickness low as 25mm. Experiment shows that the converter is capable of driving 500W load with natural cooling at room temperature, or 1kW load with an extra 10W forced cooling.
-- Responsible for circuit design. Proposed a multistage topology combining a multi-winding CLLC converter and a synchronous buck/boost adjusting stage. Derived the steady-stage gain in MATLAB and tuned the component values. Ran simulations in PLECS and PSpice. Selected the switching devices based on the result of the loss stimulations.
-- Independently designed the gate driver, isolated sampling circuit, auxiliary power supply and other subsystems. Drew a 6-layer PCB by Altium Designer. Designed the DSP controller daughter board.
-- As the leader, won the special prize (2nd place nationwide) with a team of four. Distributed the missions and organized the experiments during the competition. Participated in multiple replies. Finished the report, poster, video, etc.
+- Responsible for circuit design. Proposed a multistage topology combining a multi-winding CLLC converter and a synchronous buck/boost adjusting stage. Derived the steady-state model in MATLAB and tuned the component values. Selected the switching devices based on the result of the loss stimulations.
+- Independently designed the gate driver, isolated sampling circuit, auxiliary power supply and other subsystems. Implemented the system on a 6-layer PCB.
+- As the leader, attained the special prize (2nd place nationwide) with a team of four. Monitored the progress and organized experiments during competition. Participated in multiple replies. Finished report, poster, video, etc.
 
 ## Smart Stethoscope & Electrocardiogram Detector
 
@@ -74,16 +74,16 @@ import Heartsound_2 from '/src/assets/images/heartsound-2.jpg'
 
 - Designed a smart stethoscope for early scan of congenital cardiac diseases. The device is powered by battery and communicates via Bluetooth. The electrocardiogram (ECG) and the sound of the heart are sampled simultaneously and are transmitted to the upper device, which uses a pre-trained ML model to detect the indications of cardiac diseases.
 - Responsible for hardware design. Designed a heart sound detector using microphone and OPAMP, an ECG detector using AD8232 signal conditioning block, a Li-ion battery managing circuit and the peripheral circuits of an ESP32 SoC. Drew a 4-layer round PCB with diameter of 30mm.
-- Participated in the development of embedded software. Designed a 16-order Butterworth notch filter in MATLAB and implemented it on ESP32.
-- Won the first prize with a team of three. Wrote the report and participated in the replies.
+- Participated in the development of embedded software. Designed a 16-order digital Butterworth notch filter and implemented on ESP32.
+- Won the first prize of the 7th National Biomedical Engineering Competition in China with a team of three. 
 
 # Extracurricular Activities
 ## Student Robotics Association, Zhejiang Univ.
-- Elected as the director of software department. Responsible for crew training, including basic circuit design, sensor usage and Arduino programming.
+- Elected as the director of software department. Responsible for crew training, including Arduino programming and basic principles of 8-bit AVR MCUs.
 
 ## Qizhen Interdisciplinary Innovation & Entrepreneur Lab, Zhejiang Univ.
-- Host seminars regularly to share technical updates with team members.
-- Responsible of crew training, including circuit simulation and PCB design fundamentals.
+- Host regular seminars where team members share technical updates.
+- Responsible of crew training, including circuit design and embedded software development.
 
 {/* # Technique Skills
 **Circuit-level simulation tools**: Cadence PSpice, PLECS, ADS, Multisim, Proteus.
